kubernetes/manifests/audiobook/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobook-http-route
  namespace: audiobook
  annotations:
    external-dns.alpha.kubernetes.io/hostname: bookshelf.nullservers.com
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: cilium-gateway-system
    sectionName: https-wildcard
  hostnames:
  - "bookshelf.nullservers.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: audiobook
      port: 80
